# adreader

./: .envrc.example  .gitignore  .isort.cfg  README.md  pyproject.toml
src/: go.py
src/adreader/: gui.py
src/adreader/cli/: __init__.py
src/adreader/utils/: __init__.py  cache.py  codecs.py  renderer.py
src/adreader/utils/templates/: entry.j2  page.j2  scanned.j2
tests/: test_box.py  test_cache.py
